--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,17 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- Dependencies -->
+        <org.apache.derby.derby.version>10.13.1.1</org.apache.derby.derby.version>
         <org.apache.logging.log4j.version>22.11.2</org.apache.logging.log4j.version>
         <org.jacoco.jacoco-maven-plugin.version>0.8.3</org.jacoco.jacoco-maven-plugin.version>
+        <org.apache.derby.derby.version>10.13.1.1</org.apache.derby.derby.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.15.1.3</version>
+            <version>${org.apache.derby.derby.version}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -32,12 +34,13 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>2.1.4.RELEASE</version>
             <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
+        </dependency>
+        
+       <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.1.4.RELEASE</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Slf4j dependency look where jgit version starts
@@ -48,34 +51,6 @@
             <scope>compile</scope>
         </dependency>
         -->
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.26</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.26</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.11.2</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.11.2</version>
-            <scope>compile</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
