--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:derby:directory:target/test/conflictdb;create=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
 spring.derby.stream.error.file=/dev/null
